--- a/playbooks/deploy-vault.yml
+++ b/playbooks/deploy-vault.yml
@@ -12,16 +12,16 @@
       user:
         name: "{{ vault_user }}"
         group: "{{ vault_group }}"
-        system: yes
+        create_group: true
+        system: true
         home: /opt/vault
         shell: /bin/bash
-        create_home: yes
+        create_home: true
 
     - name: Install required packages
       dnf:
         name:
           - podman
-          - podman-compose
           - python3-pip
           - openssl
         state: present
